# Scorpion-Engine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/scorpion/core/: actor.h  api.h  component.h  scene.h  scorpion.h
engine/include/scorpion/engine_std/: camera.h  cube_renderer.h  physics_body.h  transform.h
engine/include/scorpion/foundation/memory/: allocator.h
engine/include/scorpion/hal/: input.h  renderer.h
engine/include/scorpion/render/: renderer.h
engine/include/scorpion/util/: actor_factory.h  lazy.h  math.h  std_types.h  timer.h
engine/src/core/: actor.cpp  component.cpp  scene.cpp  scorpion.cpp
engine/src/engine_std/: camera.cpp  cube_renderer.cpp  physics_body.cpp  transform.cpp
engine/src/foundation/memory/: allocator.c
engine/src/hal/: input.cpp  renderer.cpp
engine/src/render/: input.cpp  renderer.cpp
engine/src/util/: actor_factory.cpp
examples/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  main.cpp
